# logger_test

./: CMakeLists.txt  main.cpp
gui/: MainWidget.cpp  MainWidget.h
logger/: Controller.cpp  Controller.h  LogController.cpp  LogController.h
settings/: AppSettings.cpp  AppSettings.h  LogSettings.cpp  LogSettings.h  Settings.cpp  Settings.h
